# redis_mysql

./: .gitmodules  CMakeLists.txt  README.md  README.txt  RdsOnMysql.sln  clean.py  clean.sh
include/: common.h  odbcsql.h  redissql.h  sqlconnector.h
odbc/: odbcinstall.py  odbcsql.cpp  odbcsql.vcxproj
odbc/mysql/Linux/: versioninfo.txt
odbc/mysql/Windows/: versioninfo.txt
odbc/mysql/Windows/lib/: myodbc5S.lib  myodbc5a.lib  myodbc5w.lib
redis/: demo.cpp  redis.vcxproj
sql/: mysql.vcxproj
src/: Permanenter.cpp  Permanenter.vcxproj  RdsOnMysql.aps  RdsOnMysql.cpp  RdsOnMysql.vcxproj  loader.h  main.cpp  odbcsql.cpp  redissql.cpp  resource.h  saver.h  sqlconnector.cpp  test_main.cpp
test/: redis_test.cpp
third/hiredis/lib/: hiredis.lib
third/hiredis/lib/Windows/x64/: hiredis.lib  hiredisd.lib
third/hiredis/lib/Windows/x86/: hiredis.lib  hiredisd.lib
third/mysql_connector_c616/include/: my_config.h  my_config_i686.h  my_config_win64.h  my_config_win86.h  my_config_x86_64.h
